build: allow to compile using preview Java features