@@ -49,6 +49,7 @@ subprojects {
         withType<JavaCompile> {
             options.encoding = Charsets.UTF_8.name()
             options.release.set(17)
+            options.compilerArgs.add("--enable-preview")
         }
 
         withType<Javadoc> {
